Finish landing page and styling, change methods of spacing to use more flexbox

--- a/index.html
+++ b/index.html
@@ -10,39 +10,83 @@
 </head>
 
 <body>
-    <div class="header">
-        <img class="left" src="">
-        <ul class="right">
-            <li><a href="">header link one</a></li>
-            <li><a href="">header link 2</a></li>
-            <li><a href="">header link 3</a></li>
-        </ul>
-    </div>
-    <div class="intro">
-        <div class="text-and-button">
-            <h1>This website is awesome</h1>
-            <p>Some nice text and stuff</p>
-            <button class="sign-up">Sign up</button>
+    <div class="dark-blue-top">
+        <div class="left-edge"></div>
+        <div class="top-center">
+            <div class="header">
+                <div>
+                    <img class="left" src="./images/logo.png">
+                </div>
+                <ul class="right">
+                    <li><a href="">header link one</a></li>
+                    <li><a href="">header link 2</a></li>
+                    <li><a href="">header link 3</a></li>
+                </ul>
+            </div>
+            <div class="intro">
+                <div class="text-and-button">
+                    <h1>This website is awesome</h1>
+                    <p>This is the Thomas and his friends fan club. A place to hang out and discuss all things in the
+                        Thomasverse.</p>
+                    <button class="sign-up">Sign up</button>
+                </div>
+                <img class="right" src="./images/friends.jpg">
+            </div>
         </div>
-        <img class="right" src="./images/friends.jpg">
+        <div class="right-edge"></div>
     </div>
     <div class="image-container">
         <h2>Meet the folks</h2>
-        <div>
-            <div class="images">
-                <img src="./images/james.jpg" alt="">
-                <img src="./images/CGI_Thomas.webp" alt="">
-                <img src="./images/spencer.webp" alt="">
-                <img src="./images/SirTophamHatt.webp" alt="">
+        <div class="images">
+            <div class="character">
+                <img src="./images/james.jpg" alt="James the Red Tank Engine" style="object-fit: cover; ">
+                <div class="description">
+                    This is James he is nice and red
+                </div>
+            </div>
+            <div class="character">
+                <img src="./images/CGI_Thomas.webp" alt="Thomas the Blue Tank Engine">
+                <div class="description">
+                    This is Thomas the leader of the gang
+                </div>
+            </div>
+            <div class="character">
+                <img src="./images/spencer.webp" alt="Spencer the Grey Tank Engine">
+                <div class="description">
+                    This is Spencer, he is nice and grey
+                </div>
+            </div>
+            <div class="character">
+                <img src="./images/SirTophamHatt.webp" alt="The fat controller">
+                <div class="description">
+                    This is Sir Topham Hatt, The Fat Controller
+                </div>
+
             </div>
         </div>
     </div>
-    <div class="quote"></div>
-    <div class="action-container">
-        <div class="call-to-action">
-            <div></div>
-            <button class="sign-up"></button>
+    <div class="quote">
+        <div class="center">
+            <div class="quote-text">“Once upon a time, there was a little engine called Edward. He lived in a Shed with
+                five other engines. There were all bigger than Edward and boasted about it. ‘The Driver won’t choose you
+                again,’ they said. ‘He wants big, strong engines like us."</div>
+            <div class="quotee">-Edward</div>
         </div>
+    </div>
+    <div class="action-container">
+        <div class="left-edge"></div>
+        <div class="action-center">
+            <div class="action-space"></div>
+            <div class="call-to-action">
+                <div class="action-text">
+                    <h4>Call to action! It's time</h4>
+                    <p>Sign up to join the Thomas fan club</p>
+                </div>
+                <button class="sign-up">Sign up</button>
+            </div>
+            <div class="action-space"></div>
+        </div>
+        <div class="right-edge"></div>
     </div>
     <div class="footer">Thomas the Tank Engine Lovers 2023</div>
 </body>
